--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -16,7 +16,7 @@
                     <a class="nav-link" >Phraseology</a>
                 </li>
                 <li class="nav-item mx-4">
-                    <a href="#" class="nav-link">About</a>
+                    <a class="nav-link" [routerLink]="'about'" [routerLinkActive]="'active'">About</a>
                 </li>
             </ul>
         </div>
