--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -21,7 +21,7 @@
             </ul>
         </div>
     
-        <button type="button" class="btn btn-primary d-none d-lg-block" id="startmetar">Start Metar<i class="fa-solid fa-arrow-right"></i></button>
+        <button [routerLink]="'view-metar'" type="button" class="btn btn-primary d-none d-lg-block" id="startmetar">Start Metar<i class="fa-solid fa-arrow-right"></i></button>
     
     </nav>
 </div>
