--- a/src/app/components/body/body.html
+++ b/src/app/components/body/body.html
@@ -11,7 +11,7 @@
             <div class="col-lg-6 col-md-12 text-center text-lg-start">
                 <h1 class="display-5 fw-bold lh-1 mb-3">YOUR <span>METAR</span> AND <br><span>UTILITIES MANAGER</span></h1>
                 <p class="lead mb-4">Find out the weather conditions at your origin, destination or alternate aerodrome.</p>
-                <button type="button" class="btn btn-lg px-4" id="start-button">
+                <button [routerLink]="'view-metar'" type="button" class="btn btn-lg px-4" id="start-button">
                     Start Metar <i class="fa-solid fa-arrow-right ms-2"></i>
                 </button>
             </div>
