--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -2,9 +2,10 @@ footer {
   padding: 10px 0;
   bottom: 0;
   width: 100%;
+  position: fixed;
   text-align: center;
   color: white;
   background-color: #353000;
-  border-radius: 30px;
+  border-radius: 10px;
   border: 1px solid #E7DE79
 }
