--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,16 +1,17 @@
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar">
 
-        <a class="navbar-brand" id="navbrand" href="#"><img src="../../../assets/favicon.ico" alt="logo icon" width="77px"></a>
-    
+        <a class="navbar-brand" id="navbrand" href="#"><img src="../../../assets/favicon.ico" alt="logo icon"
+                width="77px"></a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
             <i class="fa-solid fa-bars"></i>
         </button>
-    
+
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active mx-4">
-                    <a class="nav-link">TOD Calculator</a>
+                <li class="nav-item mx-4">
+                    <a routerLink="tod-calculator" class="nav-link" [routerLinkActive]="'active'">TOD Calculator</a>
                 </li>
                 <li class="nav-item mx-4">
                     <a class="nav-link">Phraseology</a>
@@ -20,8 +21,9 @@
                 </li>
             </ul>
         </div>
-    
-        <button [routerLink]="'view-metar'" type="button" class="btn btn-primary d-none d-lg-block" id="startmetar">Start Metar<i class="fa-solid fa-arrow-right"></i></button>
-    
+
+        <button [routerLink]="'view-metar'" type="button" class="btn btn-primary d-none d-lg-block"
+            id="startmetar">Start Metar<i class="fa-solid fa-arrow-right"></i></button>
+
     </nav>
 </div>
